--- a/pipeline/dvc.yaml
+++ b/pipeline/dvc.yaml
@@ -1,7 +1,3 @@
-# dvc.yaml
-
-# Project: (You'll need to fill this in)
-
 stages:
   setup:
     cmd:
@@ -12,6 +8,9 @@ stages:
       - requirements.txt
     outs:
       - requirements-frozen.txt:
+          persist: false
+      - .venv-setup:
+          cache: true
           persist: false
 
   infrastruct:
@@ -25,6 +24,9 @@ stages:
       - requirements-infrastruct.txt
     outs:
       - requirements-infrastruct-frozen.txt:
+          persist: false
+      - .venv-infrastruct:
+          cache: true
           persist: false
 
   ingest:
@@ -51,6 +53,9 @@ stages:
       - data/raw/data.parquet:
           cache: true
           persist: true
+      - .venv-ingest:
+          cache: true
+          persist: false
 
   preprocess:
     cmd:
@@ -71,6 +76,9 @@ stages:
       - data/interim/feature_names.joblib:
           cache: true
           persist: true
+      - .venv-preprocess:
+          cache: true
+          persist: false
 
   explore:
     cmd:
@@ -116,6 +124,9 @@ stages:
       - reports/cleanlab/feature_importance.csv:
           cache: true
           persist: true
+      - .venv-explore:
+          cache: true
+          persist: false
 
   featurize:
     cmd:
@@ -126,7 +137,7 @@ stages:
     deps:
       - src/featurize.py
       - requirements-featurize.txt
-      - data/interim/data_cleanlab.parquet
+      - data/interim/data_cleaned.parquet
       - feature_store.yaml
     outs:
       - requirements-featurize-frozen.txt:
@@ -134,6 +145,9 @@ stages:
       - data/interim/data_featured.parquet:
           cache: true
           persist: true
+      - .venv-featurize:
+          cache: true
+          persist: false
 
   train_logisticregression:
     cmd:
@@ -151,6 +165,9 @@ stages:
       - models/logistic_regression/artifacts/model:
           cache: true
           persist: true
+      - .venv-logisticregression:
+          cache: true
+          persist: false
     metrics:
       - models/logistic_regression/artifacts/metrics.json:
           cache: true
@@ -165,6 +182,7 @@ stages:
       - models/logistic_regression/artifacts/plots/roc.png:
           cache: true
           persist: true
+
 
   train_neuralnetwork:
     cmd:
@@ -182,6 +200,9 @@ stages:
       - models/neural_network/artifacts/model:
           cache: true
           persist: true
+      - .venv-neuralnetwork:
+          cache: true
+          persist: false
     metrics:
       - models/neural_network/artifacts/metrics.json:
           cache: true
@@ -214,11 +235,9 @@ stages:
       - models/autogluon/artifacts/model:
           cache: true
           persist: true
-    metrics:
       - models/autogluon/artifacts/metrics.json:
           cache: true
           persist: true
-    plots:
       - models/autogluon/artifacts/plots/confusion_matrix.png:
           cache: true
           persist: true
@@ -228,3 +247,39 @@ stages:
       - models/autogluon/artifacts/plots/roc.png:
           cache: true
           persist: true
+      - .venv-autogluon:
+          cache: true
+          persist: false
+
+artifacts:
+  logistic_regression:
+    path: models/logistic_regression/artifacts/model/model.joblib
+    type: model
+    desc: "Trained Logistic Regression model for readmission prediction"
+    labels:
+      - baseline
+      - interpretable
+    meta:
+      features: "engineered features, standardized"
+      algorithm: sklearn.linear_model.LogisticRegression
+  neural_network:
+    path: models/neural_network/artifacts/model/model.keras
+    type: model
+    desc: "Trained deep Neural Network model for readmission prediction"
+    labels:
+      - deep-learning
+      - tensorflow
+    meta:
+      architecture: "MLP, 3 hidden layers"
+      optimizer: Adam
+      epochs: 100
+  autogluon:
+    path: models/autogluon/artifacts/model/model.pkl
+    type: model
+    desc: "Trained AutoGluon ensemble model for readmission prediction"
+    labels:
+      - automl
+      - ensemble
+    meta:
+      framework: autogluon
+      hyperparameters: "tuned with best_quality preset"
