--- a/pipeline/requirements-ingest-frozen.txt
+++ b/pipeline/requirements-ingest-frozen.txt
@@ -1,4 +1,3 @@
-absl-py==2.1.0
 adlfs==2024.7.0
 aiobotocore==2.15.2
 aiohappyeyeballs==2.4.3
@@ -7,7 +6,6 @@ aiohttp-retry==2.9.0
 aioitertools==0.12.0
 aiooss2==0.2.10
 aiosignal==1.3.1
-alembic==1.13.3
 aliyun-python-sdk-core==2.16.0
 aliyun-python-sdk-kms==2.16.5
 amqp==5.2.0
@@ -16,7 +14,6 @@ antlr4-python3-runtime==4.9.3
 anyio==4.6.2.post1
 appdirs==1.4.4
 argcomplete==3.5.1
-astunparse==1.6.3
 async-timeout==4.0.3
 asyncssh==2.18.0
 atpublic==5.0
@@ -39,12 +36,9 @@ click-didyoumean==0.3.1
 click-plugins==1.1.1
 click-repl==0.3.0
 colorama==0.4.6
-colorlog==6.8.2
 configobj==5.0.9
-contourpy==1.3.0
 crcmod==1.7
 cryptography==43.0.3
-cycler==0.12.1
 decorator==5.1.1
 dictdiffer==0.9.0
 diskcache==5.6.3
@@ -71,14 +65,11 @@ dvclive==3.48.0
 entrypoints==0.4
 exceptiongroup==1.2.2
 filelock==3.16.1
-flatbuffers==24.3.25
 flatten-dict==0.4.2
 flufl-lock==8.1.0
-fonttools==4.54.1
 frozenlist==1.5.0
 fsspec==2024.10.0
 funcy==2.0
-gast==0.6.0
 gcsfs==2024.10.0
 gitdb==4.0.11
 gitpython==3.1.43
@@ -90,15 +81,11 @@ google-auth-oauthlib==1.2.1
 google-cloud-core==2.4.1
 google-cloud-storage==2.18.2
 google-crc32c==1.6.0
-google-pasta==0.2.0
 google-resumable-media==2.7.2
 googleapis-common-protos==1.65.0
 grandalf==0.8
-greenlet==3.1.1
-grpcio==1.67.0
 gto==1.7.1
 h11==0.14.0
-h5py==3.12.1
 httpcore==1.0.6
 httplib2==0.22.0
 httpx==0.27.2
@@ -108,37 +95,24 @@ isodate==0.7.2
 iterative-telemetry==0.0.9
 jmespath==0.10.0
 joblib==1.4.2
-keras==3.6.0
-kiwisolver==1.4.7
 knack==0.12.0
 kombu==5.4.2
-libclang==18.1.1
-mako==1.3.6
-markdown==3.7
 markdown-it-py==3.0.0
-markupsafe==3.0.2
-matplotlib==3.9.2
 mdurl==0.1.2
-ml-dtypes==0.4.1
 msal==1.31.0
 msal-extensions==1.2.0
 multidict==6.1.0
-namex==0.0.8
 networkx==3.4.2
-numpy==1.26.4
+numpy==2.1.2
 oauth2client==4.1.3
 oauthlib==3.2.2
 omegaconf==2.3.0
-opt-einsum==3.4.0
-optree==0.13.0
-optuna==4.0.0
 orjson==3.10.10
 oss2==2.18.1
 ossfs==2023.12.0
 packaging==24.1
 pandas==2.2.3
 pathspec==0.12.1
-pillow==11.0.0
 platformdirs==3.11.0
 portalocker==2.10.1
 prompt-toolkit==3.0.48
@@ -163,6 +137,7 @@ pynvml==11.5.3
 pyopenssl==24.2.1
 pyparsing==3.2.0
 python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
 pytz==2024.2
 pyyaml==6.0.2
 requests==2.32.3
@@ -176,7 +151,6 @@ s3transfer==0.10.3
 scikit-learn==1.5.2
 scipy==1.14.1
 scmrepo==3.3.8
-seaborn==0.13.2
 semver==3.0.2
 setuptools==75.2.0
 shellingham==1.5.4
@@ -185,29 +159,22 @@ shtab==1.7.1
 six==1.16.0
 smmap==5.0.1
 sniffio==1.3.1
-sqlalchemy==2.0.36
 sqltrie==0.11.1
 sshfs==2024.9.0
 tabulate==0.9.0
-tensorboard==2.18.0
-tensorboard-data-server==0.7.2
-tensorflow==2.18.0
-tensorflow-io-gcs-filesystem==0.37.1
-termcolor==2.5.0
 threadpoolctl==3.5.0
 tomlkit==0.13.2
 tqdm==4.66.6
 typer==0.12.5
 typing-extensions==4.12.2
 tzdata==2024.2
+ucimlrepo==0.0.7
 uritemplate==4.1.1
 urllib3==2.2.3
 vine==5.1.0
 voluptuous==0.15.2
 wcwidth==0.2.13
 webdav4==0.10.0
-werkzeug==3.0.6
-wheel==0.44.0
 wrapt==1.16.0
-yarl==1.16.0
+yarl==1.17.0
 zc-lockfile==3.0.post1
